# cyrillic-pad

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install
.github/workflows/: cmake.yml
css/: about.css  mainwindow.css
include/controller/: MainWindowController.hpp
include/tool/: Utils.hpp
include/view/: AboutView.hpp  MainWindowView.hpp
src/: main.cpp
src/controller/: MainWindowController.cpp
src/tool/: Utils.cpp
src/view/: AboutView.cpp  MainWindowView.cpp
